--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,76 @@ body {
   color: white;
 }
 
-h1 {
+h2 {
+  color: #48d1cc; /*mediumturqoise*/
   text-align: center;
+  font-weight: bold;
+}
+
+p {
+  font-size: 14pt;
+}
+
+hr {
+  border-color: seagreen;
+}
+
+p strong {
+  font-size: 16pt;
+  font-weight: bold;
+  color: aqua;
+}
+
+h2 small {
+  color: #248f8b;
+}
+
+a:link {
+  color: lavender;
+}
+
+a:visited {
+  color: mediumorchid;
+}
+
+a:hover {
+  color: white;
 }
 
 @font-face {
   font-family: 'arcade';
   src: url('../ttf/arcade.ttf');
+}
+
+#pwheader {
+  margin-left: 140px;
+}
+
+#botrow {
+  /*position: fixed;*/
+  margin-top: 80%;
+}
+
+.lists {
+  display: inline;
+  text-align: center;
+  list-style-type: circle;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding: 0;
+}
+
+/*.colborder {border: 1px solid grey;}*/
+
+/*.conborder {border: 1px solid red;}*/
+
+.sbtext {
+  font-size: 14pt;
+}
+
+.centpic {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0px;
 }
