--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ h2 {
 
 p {
   font-size: 18pt;
+  content: normal;
 }
 
 hr {
@@ -37,11 +38,13 @@ hr {
 p strong {
   font-size: 18pt;
   font-weight: bold;
-  color: #cc00cc;
+  color: darkgoldenrod;
 }
 
 h2 small {
   color: #248f8b;
+  float: right;
+  padding-top: 10px;
 }
 
 a:link {color: mediumorchid;}
@@ -51,33 +54,36 @@ a:hover {color: white; text-decoration: none;}
 @font-face {
   font-family: 'arcade';
   src: url('../ttf/arcade.ttf');
+  font-stretch: expanded;
 }
 
 #pwheader {
-  margin-left: 140px;
+  margin-left: 35%;
 }
 
 #midrow {
   /*position: fixed;*/
-  border: 8px rgba(0,0,0,1);
+  border: 8px;
   border-style: ridge;
-  border-color: blue;
-  background: linear-gradient(rgba(0,0,0,0), rgba(0,45,179,0.5), rgba(0,0,0,1));
+  border-color: rgba(0,20,120,0.4);
+  background: linear-gradient(rgba(0,0,0,0), rgba(0,20,120,0.5), rgba(0,0,0,1));
   margin-left: 90px;
   margin-right: 90px;
-  margin-top: 2em;
-  margin-bottom: 2em;
+  margin-top: 8em;
+  margin-bottom: 10em;
 }
 
 #botrow {
   /*position: fixed;*/
-  border: 8px rgba(0,0,0,1);
+  border: 8px;
   border-style: ridge;
-  border-color: blue;
-  background: linear-gradient(rgba(0,0,0,0), rgba(0,45,179,0.5), rgba(0,0,0,1));
+  border-color: rgba(0,20,120,0.7);
+  background: linear-gradient(rgba(0,0,0,0), rgba(0,20,120,0.5), rgba(0,0,0,1));
   margin-left: 90px;
   margin-right: 90px;
-  margin-top: 2em;
+  margin-top: 8em;
+  padding: 0;
+  text-align: center;
 }
 
 #selfport {
@@ -96,7 +102,9 @@ a:hover {color: white; text-decoration: none;}
 
 .horlist ol li {
   display: inline-block;
+  padding-right: 70px;padding-bottom: 10px;
   text-align: center;
+  font-size: 14pt;
 }
 
 .lists {
@@ -132,7 +140,15 @@ a:hover {color: white; text-decoration: none;}
 
 .centpic {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  /*margin-left: auto;
+  margin-right: auto;*/
   padding: 0px;
+}
+
+.centerbox {
+  text-align: center;
+}
+
+.margin_remove {
+  margin: 0;
 }
