--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,16 @@ p {
 }
 
 hr {
-  border-color: mediumturquoise;
+  border: 0;
+  height: 1px;
+  background: #48D1CC;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.9), rgba(72,209,204, 0.1), rgba(0, 0, 0, 0.9));
 }
 
 p strong {
   font-size: 18pt;
   font-weight: bold;
-  color: darkgoldenrod;
+  color: pselecgoldenrod;
 }
 
 h2 small {
@@ -57,6 +60,10 @@ a:hover {color: white; text-decoration: none;}
   font-stretch: expanded;
 }
 
+#pselect {
+  margin-top: 0;
+}
+
 #pwheader {
   margin-left: 35%;
 }
@@ -69,7 +76,7 @@ a:hover {color: white; text-decoration: none;}
   background: linear-gradient(rgba(0,0,0,0), rgba(0,20,120,0.5), rgba(0,0,0,1));
   margin-left: 90px;
   margin-right: 90px;
-  margin-top: 8em;
+  margin-top: 5em;
   margin-bottom: 10em;
 }
 
@@ -86,9 +93,30 @@ a:hover {color: white; text-decoration: none;}
   text-align: center;
 }
 
+#span_container {
+  position: relative;
+  display: inline;
+}
+
 #selfport {
+  margin-top: 20px;
   height: 240px;
   width: 160px;
+}
+
+#player1 {
+  position: absolute;
+  margin-top: -30px;
+  margin-left: 280px;
+  height: 50px;
+  width: 50px;
+}
+
+#pdescription {
+  float: left;
+  margin-right: 30px;
+  top: 0;
+  text-align: center;
 }
 
 .horlist {
@@ -116,11 +144,7 @@ a:hover {color: white; text-decoration: none;}
   padding: 0;
 }
 
-/*.colborder {border: 1px solid grey;}*/
-
-/*.conborder {border: 1px solid red;}*/
-
-.sbtext {
+.text_sidebar {
   font-size: 14pt;
 }
 
@@ -138,17 +162,16 @@ a:hover {color: white; text-decoration: none;}
   height: 100%;
 }
 
-.centpic {
-  display: block;
-  /*margin-left: auto;
-  margin-right: auto;*/
-  padding: 0px;
-}
-
 .centerbox {
   text-align: center;
 }
 
 .margin_remove {
   margin: 0;
+}
+
+.link_shrink {
+  display: inline-block;
+  height: 96px;
+  width: 96px;
 }
